--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -93,14 +93,14 @@
     }
 
     .alert-info {
-        @apply flex flex-col items-center gap-2 bg-tertiary border-none px-4 py-3 rounded;
+        @apply flex flex-col items-center gap-2 bg-indigo-100 border-none px-4 py-3 rounded;
     }
 
     .alert-info i{
-        @apply text-4xl text-secondary flex items-center justify-center;
+        @apply text-4xl text-indigo.600 flex items-center justify-center;
     }
 
     .alert-info p{
-        @apply text-secondary font-body;
+        @apply text-indigo-600 font-body;
     }
 }
